--- a/P8105_hw3_lc3807.md
+++ b/P8105_hw3_lc3807.md
@@ -1,11 +1,11 @@
 p8105_hw3_lc3807.Rmd
 ================
 Linshen Cai
-2023-10-11
+2023-10-12
 
 ## Problem 1
 
-# Load data set
+## Load data set
 
 ``` r
 library(p8105.datasets)
@@ -27,7 +27,7 @@ produce), and aisle (e.g. yogurt, fresh fruits), and whether the item
 has been ordered by this user in the past. In total, there are 39123
 products found in 131209 orders from 131209 distinct users.
 
-# Summarizing the number of items ordered from aisle
+## Summarizing the number of items ordered from aisle
 
 ``` r
 instacart |> 
@@ -54,7 +54,7 @@ Above is a table summarizing the number of items ordered from aisle. In
 total, there are 134 aisles, with fresh vegetables and fresh fruits
 holding the most items ordered by far.
 
-# Plot the scatter plot
+## Plot the scatter plot
 
 ``` r
 instacart |> 
@@ -67,12 +67,12 @@ instacart |>
   theme(axis.text.x = element_text(angle = 60, hjust = 1))
 ```
 
-<img src="P8105_hw3_lc3807_files/figure-gfm/unnamed-chunk-3-1.png" width="90%" />
+![](P8105_hw3_lc3807_files/figure-gfm/unnamed-chunk-3-1.png)<!-- -->
 
 Above is a plot that shows the number of items ordered in each aisle.
 Here, aisles are ordered by ascending number of items.
 
-# Show the three most popular items
+## Show the three most popular items
 
 ``` r
 instacart |> 
@@ -101,7 +101,7 @@ The table shows the three most popular items in aisles
 `baking ingredients`, `dog food care`, and `packaged vegetables fruits`,
 and includes the number of times each item is ordered in your table.
 
-# The mean hour of the day
+## The mean hour of the day
 
 ``` r
 instacart |>
@@ -130,7 +130,7 @@ than Coffee Ice Cream, with the exception of day 5.
 
 ## Problem 2
 
-# Load the data and do some data cleaning
+## Load the data and do some data cleaning
 
 ``` r
 library(p8105.datasets)
@@ -151,4 +151,72 @@ brfss_smart2010 = brfss_smart2010 |>
 
 This dataset contains 10625 rows and 23 columns, with each row
 representing the number of response about their overall health from
-“Poor” to “Excellent” in different location of all states.
+“Poor” to “Excellent” in different location of all states every year.
+
+``` r
+# count states with 7 or more location oberved in 2020
+state_counts_2002 = brfss_smart2010 |> 
+  filter(year == 2002) |> 
+  group_by(locationabbr) |> 
+  summarize(NumObservations = n())
+states_7_or_more_2002 = state_counts_2002 |> 
+  filter(NumObservations >= 7)
+# count states with 7 or more location oberved in 2010
+state_counts_2010 = brfss_smart2010 |> 
+  filter(year == 2010) |> 
+  group_by(locationabbr) |> 
+  summarize(NumObservations = n())
+states_7_or_more_2010 = state_counts_2010 |> 
+  filter(NumObservations >= 7)
+```
+
+In 2002, there are 36 states were observed at 7 or more locations. They
+are AZ, CO, CT, DE, FL, GA, HI, ID, IL, IN, KS, LA, MA, MD, ME, MI, MN,
+MO, NC, NE, NH, NJ, NV, NY, OH, OK, OR, PA, RI, SC, SD, TN, TX, UT, VT,
+WA. In 2010, there are 45 states were observed at 7 or more locations.
+They are AL, AR, AZ, CA, CO, CT, DE, FL, GA, HI, IA, ID, IL, IN, KS, LA,
+MA, MD, ME, MI, MN, MO, MS, MT, NC, ND, NE, NH, NJ, NM, NV, NY, OH, OK,
+OR, PA, RI, SC, SD, TN, TX, UT, VT, WA, WY.
+
+``` r
+# Filter the data for "Excellent" responses
+response_excellent = brfss_smart2010 |> 
+  filter(response == "Excellent") 
+
+state_response_excellent = response_excellent |> 
+  group_by(year,locationabbr) |> 
+  summarize(mean_data_value = mean(data_value, na.rm = TRUE))
+```
+
+    ## `summarise()` has grouped output by 'year'. You can override using the
+    ## `.groups` argument.
+
+``` r
+state_response_excellent |> 
+  ggplot(aes(x = year, y = mean_data_value, color = locationabbr)) +
+  geom_line() +
+  labs(title = "Averages Data_value for Each State",
+      x = "Years",
+      y = "Averages data_value")
+```
+
+![](P8105_hw3_lc3807_files/figure-gfm/unnamed-chunk-8-1.png)<!-- -->
+
+Above is plot showing averages data_value across locations for each
+state across years.
+
+``` r
+state_counts_2006_2010 = brfss_smart2010 |> 
+  filter(year == 2006 | year == 2010, locationabbr == "NY")
+
+state_counts_2006_2010 |> 
+  ggplot(aes(x = response, y = data_value, fill = year )) +
+  geom_boxplot()+ 
+  facet_wrap(~ year) +
+  labs(title = "Distribution of Data Value by Response for NY State in 2006 and 2010",
+       x = "Response",
+       y = "Data Value") +
+  theme_minimal()
+```
+
+![](P8105_hw3_lc3807_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
