Finish Problem 2 and import the dataset for problem 3

--- a/P8105_hw3_lc3807.md
+++ b/P8105_hw3_lc3807.md
@@ -182,7 +182,7 @@ OR, PA, RI, SC, SD, TN, TX, UT, VT, WA, WY.
 # Filter the data for "Excellent" responses
 response_excellent = brfss_smart2010 |> 
   filter(response == "Excellent") 
-
+# Caculate averages data_value
 state_response_excellent = response_excellent |> 
   group_by(year,locationabbr) |> 
   summarize(mean_data_value = mean(data_value, na.rm = TRUE))
@@ -192,6 +192,7 @@ state_response_excellent = response_excellent |>
     ## `.groups` argument.
 
 ``` r
+# Make plot
 state_response_excellent |> 
   ggplot(aes(x = year, y = mean_data_value, color = locationabbr)) +
   geom_line() +
@@ -206,13 +207,14 @@ Above is plot showing averages data_value across locations for each
 state across years.
 
 ``` r
+# Creat dataframe for only year is 2006 or 2010
 state_counts_2006_2010 = brfss_smart2010 |> 
   filter(year == 2006 | year == 2010, locationabbr == "NY")
-
+# Make two-panel plot
 state_counts_2006_2010 |> 
-  ggplot(aes(x = response, y = data_value, fill = year )) +
+  ggplot(aes(x = response, y = data_value, fill = response )) +
   geom_boxplot()+ 
-  facet_wrap(~ year) +
+  facet_wrap(~ year, nrow = 2) +
   labs(title = "Distribution of Data Value by Response for NY State in 2006 and 2010",
        x = "Response",
        y = "Data Value") +
@@ -220,3 +222,68 @@ state_counts_2006_2010 |>
 ```
 
 ![](P8105_hw3_lc3807_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
+
+The above two-panel plot shows distribution of data value for responses
+(“Poor” to “Excellent”) among locations in NY State for the years 2006,
+and 2010.
+
+## Problem 3
+
+## Load, tidy, merge, and otherwise organize the data sets
+
+``` r
+# import nhabes_covar.csv and clean it
+nhanes_covar = read.csv("./data/nhanes_covar.csv", skip = 4) |> 
+  drop_na() |> 
+  filter(age >=21) |> 
+  janitor::clean_names() |> 
+  mutate(
+    sex = ifelse(sex == 1, "male", "female"),
+    sex = factor (sex, levels = c("male", "female")),
+    education = recode(education, "1" = "less_than_high_school", 
+                            "2" = "high_school_equivalent", 
+                            "3" = "more_than_high_school"),
+    education = factor(education, 
+                       levels = c("less_than_high_school","high_school_equivalent","more_than_high_school")
+                       )
+  )
+# import nhabes_accel.csv and clean it
+nhanes_accel = read.csv("./data/nhanes_accel.csv") |> 
+  janitor::clean_names()|> 
+  pivot_longer(
+    min1:min1440,
+    names_to = "minute",
+    values_to = "mims_value")
+# merge two dataframes
+
+nhanes_merge = left_join(nhanes_covar, nhanes_accel, by = "seqn")
+```
+
+## Table for the number of men and women in each education category and create a visualization of the age distributions
+
+``` r
+# Creat table for the number of men and women in each education category
+nhanes_count = nhanes_merge |> 
+  group_by(education,sex) |> 
+  summarise(n=n())
+```
+
+    ## `summarise()` has grouped output by 'education'. You can override using the
+    ## `.groups` argument.
+
+``` r
+# Create a visualization of the age distributions 
+nhanes_covar |> 
+  ggplot(aes(x = age , fill = sex,))+
+  geom_density(alpha = 0.6)+
+  facet_grid(~education)
+```
+
+![](P8105_hw3_lc3807_files/figure-gfm/unnamed-chunk-11-1.png)<!-- -->
+According to table, there are no big difference between the number male
+and the number of female in each in each education category. However, in
+education category “More Than High School”, the number of female with
+age between 25 and 40 is much larger than the number of female with same
+age based on density plot.
+
+## Create a total activity variable for each participant. Plot these total activities against age
