--- a/P8105_hw3_lc3807.md
+++ b/P8105_hw3_lc3807.md
@@ -140,7 +140,8 @@ data("brfss_smart2010")
 brfss_smart2010 = 
   brfss_smart2010 |> 
   as_tibble() |> 
-  janitor::clean_names()
+  janitor::clean_names() |> 
+  mutate(state = locationabbr)
 
 brfss_smart2010 = brfss_smart2010 |> 
   filter(topic == "Overall Health",
@@ -149,7 +150,7 @@ brfss_smart2010 = brfss_smart2010 |>
   mutate(response = factor(response, levels = c("Poor", "Fair", "Good", "Very good", "Excellent")))
 ```
 
-This dataset contains 10625 rows and 23 columns, with each row
+This dataset contains 10625 rows and 24 columns, with each row
 representing the number of response about their overall health from
 “Poor” to “Excellent” in different location of all states every year.
 
@@ -157,14 +158,14 @@ representing the number of response about their overall health from
 # count states with 7 or more location oberved in 2020
 state_counts_2002 = brfss_smart2010 |> 
   filter(year == 2002) |> 
-  group_by(locationabbr) |> 
+  group_by(state) |> 
   summarize(NumObservations = n())
 states_7_or_more_2002 = state_counts_2002 |> 
   filter(NumObservations >= 7)
 # count states with 7 or more location oberved in 2010
 state_counts_2010 = brfss_smart2010 |> 
   filter(year == 2010) |> 
-  group_by(locationabbr) |> 
+  group_by(state) |> 
   summarize(NumObservations = n())
 states_7_or_more_2010 = state_counts_2010 |> 
   filter(NumObservations >= 7)
@@ -184,7 +185,7 @@ response_excellent = brfss_smart2010 |>
   filter(response == "Excellent") 
 # Caculate averages data_value
 state_response_excellent = response_excellent |> 
-  group_by(year,locationabbr) |> 
+  group_by(year,state) |> 
   summarize(mean_data_value = mean(data_value, na.rm = TRUE))
 ```
 
@@ -194,11 +195,11 @@ state_response_excellent = response_excellent |>
 ``` r
 # Make plot
 state_response_excellent |> 
-  ggplot(aes(x = year, y = mean_data_value, color = locationabbr)) +
+  ggplot(aes(x = year, y = mean_data_value, color = state)) +
   geom_line() +
   labs(title = "Averages Data_value for Each State",
       x = "Years",
-      y = "Averages data_value")
+      y = "Average data value")
 ```
 
 ![](P8105_hw3_lc3807_files/figure-gfm/unnamed-chunk-8-1.png)<!-- -->
@@ -209,7 +210,7 @@ state across years.
 ``` r
 # Creat dataframe for only year is 2006 or 2010
 state_counts_2006_2010 = brfss_smart2010 |> 
-  filter(year == 2006 | year == 2010, locationabbr == "NY")
+  filter(year == 2006 | year == 2010, state == "NY")
 # Make two-panel plot
 state_counts_2006_2010 |> 
   ggplot(aes(x = response, y = data_value, fill = response )) +
