--- a/P8105_hw3_lc3807.md
+++ b/P8105_hw3_lc3807.md
@@ -141,7 +141,7 @@ brfss_smart2010 =
   brfss_smart2010 |> 
   as_tibble() |> 
   janitor::clean_names() |> 
-  mutate(state = locationabbr)
+  rename(state = locationabbr)
 
 brfss_smart2010 = brfss_smart2010 |> 
   filter(topic == "Overall Health",
@@ -150,7 +150,7 @@ brfss_smart2010 = brfss_smart2010 |>
   mutate(response = factor(response, levels = c("Poor", "Fair", "Good", "Very good", "Excellent")))
 ```
 
-This dataset contains 10625 rows and 24 columns, with each row
+This dataset contains 10625 rows and 23 columns, with each row
 representing the number of response about their overall health from
 “Poor” to “Excellent” in different location of all states every year.
 
@@ -159,25 +159,20 @@ representing the number of response about their overall health from
 state_counts_2002 = brfss_smart2010 |> 
   filter(year == 2002) |> 
   group_by(state) |> 
-  summarize(NumObservations = n())
-states_7_or_more_2002 = state_counts_2002 |> 
+  summarize(NumObservations = n_distinct(locationdesc)) |> 
   filter(NumObservations >= 7)
 # count states with 7 or more location oberved in 2010
 state_counts_2010 = brfss_smart2010 |> 
   filter(year == 2010) |> 
   group_by(state) |> 
-  summarize(NumObservations = n())
-states_7_or_more_2010 = state_counts_2010 |> 
+  summarize(NumObservations =  n_distinct(locationdesc)) |> 
   filter(NumObservations >= 7)
 ```
 
-In 2002, there are 36 states were observed at 7 or more locations. They
-are AZ, CO, CT, DE, FL, GA, HI, ID, IL, IN, KS, LA, MA, MD, ME, MI, MN,
-MO, NC, NE, NH, NJ, NV, NY, OH, OK, OR, PA, RI, SC, SD, TN, TX, UT, VT,
-WA. In 2010, there are 45 states were observed at 7 or more locations.
-They are AL, AR, AZ, CA, CO, CT, DE, FL, GA, HI, IA, ID, IL, IN, KS, LA,
-MA, MD, ME, MI, MN, MO, MS, MT, NC, ND, NE, NH, NJ, NM, NV, NY, OH, OK,
-OR, PA, RI, SC, SD, TN, TX, UT, VT, WA, WY.
+In 2002, there are 6 states were observed at 7 or more locations. They
+are CT, FL, MA, NC, NJ, PA. In 2010, there are 14 states were observed
+at 7 or more locations. They are CA, CO, FL, MA, MD, NC, NE, NJ, NY, OH,
+PA, SC, TX, WA.
 
 ``` r
 # Filter the data for "Excellent" responses
@@ -205,7 +200,7 @@ state_response_excellent |>
 ![](P8105_hw3_lc3807_files/figure-gfm/unnamed-chunk-8-1.png)<!-- -->
 
 Above is plot showing averages data_value across locations for each
-state across years.
+state across years.There isn’t a yearly trend.
 
 ``` r
 # Creat dataframe for only year is 2006 or 2010
@@ -226,7 +221,11 @@ state_counts_2006_2010 |>
 
 The above two-panel plot shows distribution of data value for responses
 (“Poor” to “Excellent”) among locations in NY State for the years 2006,
-and 2010.
+and 2010. The distribution is similar between 2006 and 2010, and the
+rankings of the mean data value are very good, good, excellent, fair,
+and poor. The mean value for good, very good, and excellent is higher in
+2010. Additionally, we can see that the “poor” group had the lowest
+variation throughout the course of both years.
 
 ## Problem 3
 
